# rendering_2d_with_rasterization

./: CMakeLists.txt  README.md  common_types.cpp  common_types.h  main.cpp  scene2d.cpp  scene2d.h  scene3d.cpp  scene3d.h
core2d/: affine2d.cpp  affine2d.h  camera2d.cpp  camera2d.h  model2d.cpp  model2d.h
core3d/: affine3d.cpp  affine3d.h  camera3d.cpp  camera3d.h  model3d.cpp  model3d.h  model3dbase.cpp  model3dbase.h  model3dpoly.cpp  model3dpoly.h  model3dwireandpoly.cpp  model3dwireandpoly.h  model3dwireframe.cpp  model3dwireframe.h
io/: obj.cpp  obj.h
rasterization/: bitmap.cpp  bitmap.h  bresenham.cpp  bresenham.h  color.cpp  color.h  polygonal.cpp  polygonal.h  rasterization.cpp  rasterization.h  scanline.cpp  scanline.h  segment.h  shading.cpp  shading.h  wireframe.cpp  wireframe.h
rendering/: rendering.cpp  rendering.h
